--- a/plugin.xml
+++ b/plugin.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="cordova-plugin-simple-image-resizer" version="0.1.1">
+        id="cordova-plugin-image-resizer-watermark" version="0.1.1">
   <name>Image Resizer</name>
   <description>Plugin for resizing images only with the uri of the image.</description>
   <author>Joschka Schulz</author>
   <license>Apache 2.0</license>
   <keywords>cordova,device,resize,image</keywords>
-  <repo>https://github.com/protonet/cordova-plugin-image-resizer.git</repo>
+  <repo>https://github.com/azhengyongqin/cordova-plugin-image-resizer-watermark</repo>
 
   <js-module src="www/image_resizer.js" name="ImageResizer">
     <clobbers target="ImageResizer" />
